--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -107,7 +107,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="lJj-qs-c5f" kind="modal" id="cfZ-zF-ytR"/>
+                                    <segue destination="Koc-Kz-2zD" kind="modal" id="lqX-lR-N75"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -129,57 +129,83 @@
             </objects>
             <point key="canvasLocation" x="174" y="-83"/>
         </scene>
+        <!--Notification Table View Controller-->
+        <scene sceneID="PlN-f5-YwT">
+            <objects>
+                <tableViewController storyboardIdentifier="NotificationTableViewController" id="bEv-H0-8mp" customClass="NotificationTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="pbw-Ax-IZk">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="jwA-1F-B6Y">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <connections>
+                                    <segue destination="lJj-qs-c5f" kind="push" id="3PP-3i-96X"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="bEv-H0-8mp" id="zGF-m4-bXF"/>
+                            <outlet property="delegate" destination="bEv-H0-8mp" id="qbc-MZ-d7r"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Tfy-xC-rVI"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="idU-ev-zhy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1430" y="-548"/>
+        </scene>
         <!--Notification View Controller-->
         <scene sceneID="QSx-AT-aDK">
             <objects>
                 <viewController storyboardIdentifier="NotificationViewController" id="lJj-qs-c5f" customClass="NotificationViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aIq-VG-R5S">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OcA-BL-9dt">
-                                <items>
-                                    <navigationItem title="Notification" id="144-RM-IOt">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="64R-LH-BUW">
-                                            <connections>
-                                                <segue destination="9qT-Qf-qzL" kind="modal" id="0uz-BK-aSu"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Rek-h8-d6n">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLu-DU-T0g">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="Zxt-xy-keq"/>
+                                    <constraint firstAttribute="width" constant="241" id="YmU-M2-ecv"/>
+                                    <constraint firstAttribute="height" constant="21" id="hbP-Dd-kn8"/>
                                 </constraints>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3zh-9Q-i22">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tWW-ls-H3G">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="491" id="NLY-Ho-ySH"/>
-                                    <constraint firstAttribute="width" constant="326" id="VmQ-Pj-MPx"/>
+                                    <constraint firstAttribute="width" constant="240" id="nkW-hC-s7U"/>
+                                    <constraint firstAttribute="height" constant="128" id="zwl-rv-KSo"/>
                                 </constraints>
-                            </tableView>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="OcA-BL-9dt" firstAttribute="leading" secondItem="aIq-VG-R5S" secondAttribute="leading" type="default" id="26t-rZ-419"/>
-                            <constraint firstItem="OcA-BL-9dt" firstAttribute="trailing" secondItem="aIq-VG-R5S" secondAttribute="trailing" type="default" id="4hS-lm-aVv"/>
-                            <constraint firstItem="Rek-h8-d6n" firstAttribute="trailing" secondItem="aIq-VG-R5S" secondAttribute="trailing" type="default" id="8Nf-FV-9er"/>
-                            <constraint firstItem="Rek-h8-d6n" firstAttribute="top" secondItem="aIq-VG-R5S" secondAttribute="top" type="default" id="TEc-09-d2D"/>
-                            <constraint firstItem="OcA-BL-9dt" firstAttribute="top" secondItem="aIq-VG-R5S" secondAttribute="top" type="default" id="Trv-G1-QDY"/>
-                            <constraint firstItem="3zh-9Q-i22" firstAttribute="bottom" secondItem="aIq-VG-R5S" secondAttribute="bottom" type="default" id="pV2-8G-cdb"/>
-                            <constraint firstItem="3zh-9Q-i22" firstAttribute="trailing" secondItem="aIq-VG-R5S" secondAttribute="trailing" type="default" id="pxz-F9-26g"/>
+                            <constraint firstItem="tWW-ls-H3G" firstAttribute="top" secondItem="aIq-VG-R5S" secondAttribute="top" constant="125" id="6F1-d4-1uc"/>
+                            <constraint firstItem="tWW-ls-H3G" firstAttribute="centerX" secondItem="aIq-VG-R5S" secondAttribute="centerX" type="default" id="ZiQ-ky-hON"/>
+                            <constraint firstItem="SLu-DU-T0g" firstAttribute="leading" secondItem="aIq-VG-R5S" secondAttribute="leading" constant="38" id="hVa-Ra-iIe"/>
+                            <constraint firstItem="SLu-DU-T0g" firstAttribute="top" secondItem="aIq-VG-R5S" secondAttribute="top" constant="20" symbolic="YES" type="default" id="zFd-8p-Koq"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="rhN-6Q-aQq"/>
                     <connections>
-                        <outlet property="NotificationsText" destination="3zh-9Q-i22" id="fNT-jo-DIw"/>
+                        <outlet property="notificationDate" destination="SLu-DU-T0g" id="gN7-bT-haT"/>
+                        <outlet property="notificationText" destination="tWW-ls-H3G" id="UhL-tz-cVP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="scO-Ls-BeD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="804" y="-313"/>
+            <point key="canvasLocation" x="2030" y="-537"/>
         </scene>
         <!--Communication View Controller - CommunicationViewController-->
         <scene sceneID="AI0-tf-MlB">
@@ -281,6 +307,24 @@
             </objects>
             <point key="canvasLocation" x="812" y="549"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vrk-B4-Ued">
+            <objects>
+                <navigationController id="Koc-Kz-2zD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tCH-pW-fBc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="bEv-H0-8mp" kind="relationship" relationship="rootViewController" id="2wk-R6-w2H"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MJ8-EF-OGU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="778" y="-514"/>
+        </scene>
     </scenes>
     <classes>
         <class className="CommunicationViewController" superclassName="UIViewController">
@@ -307,10 +351,14 @@
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
+        <class className="NotificationTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationTableViewController.h"/>
+        </class>
         <class className="NotificationViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
             <relationships>
-                <relationship kind="outlet" name="NotificationsText" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationText" candidateClass="UITextView"/>
             </relationships>
         </class>
     </classes>
@@ -319,7 +367,4 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="0uz-BK-aSu"/>
-    </inferredMetricsTieBreakers>
 </document>
